halt on basic_2 release_train

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required(VERSION 3.12)
 
-project(TicketSystem)
+project(code)
 
 # 添加源文件
 file(GLOB_RECURSE SOURCES "src/*.cpp" "src/*.hpp")
 
 # 添加可执行文件
-add_executable(TicketSystem ${SOURCES})
+add_executable(code ${SOURCES})
